--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+*.mp4
+.mp4.meta
+Assets/Resources/Movie/タイトル後.mp4.meta
+Assets/Resources/Movie/タイトル画面.mp4.meta
