動画入れ替え

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ crashlytics-build.properties
 .mp4.meta
 Assets/Resources/Movie/タイトル後.mp4.meta
 Assets/Resources/Movie/タイトル画面.mp4.meta
+Assets/Resources/Movie/新タイトルロゴ (1).mp4.meta
